replace net.sourceforge mention by org.musescore, fix file type associations on mac, add gp, scx...
Former-commit-id: 1f7b1956c37d227402d3efef67d0f2bd9b4d61c6

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -193,9 +193,8 @@ endif (USE_JACK)
 
 if (APPLE)
         set (ExecutableName mscore MACOSX_BUNDLE)
-        set (MACOSX_BUNDLE_INFO_STRING MuseScore prerelease for Mac OSX)
         set (MACOSX_BUNDLE_ICON_FILE      mscore.icns)
-        set (MACOSX_BUNDLE_GUI_IDENTIFIER net.sourceforge.mscore)
+        set (MACOSX_BUNDLE_GUI_IDENTIFIER org.musescore.MuseScore)
         set (MACOSX_BUNDLE_LONG_VERSION_STRING ${MUSESCORE_VERSION_FULL})
         set (MACOSX_BUNDLE_BUNDLE_NAME MuseScore)
         set (MACOSX_BUNDLE_SHORT_VERSION_STRING ${MUSESCORE_VERSION})
