--- a/mtest/libmscore/copypastesymbollist/CMakeLists.txt
+++ b/mtest/libmscore/copypastesymbollist/CMakeLists.txt
@@ -11,10 +11,7 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
-subdirs(
-      beam clef compat concertpitch copypaste copypastesymbollist dynamic element
-      hairpin join keysig layout link measure midi note plugins repeat split
-      splitstaff timesig tuplet
-      )
+set(TARGET tst_copypastesymbollist)
 
+include(${PROJECT_SOURCE_DIR}/mtest/cmake.inc)
 
