fix compilation on macosx
Former-commit-id: 4366ca4510573003e6bab643a48d03909b132331

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -494,8 +494,8 @@ endif (MINGW)
 
 if (APPLE)
      install (FILES
-      ../fonts/gonville-20.ttf
-      ../fonts/mscore-20.ttf
+      ../fonts/gonville/gonville-20.ttf
+      ../fonts/mscore/mscore.otf
       ../fonts/MuseJazz.ttf
       ../fonts/FreeSerifMscore.ttf
       ../fonts/FreeSans.ttf
