remove precompiled header for Mingw :( see http://gcc.gnu.org/bugzilla/show_bug.cgi?id=56926
Former-commit-id: 8f3ed9b4b161c9d2ca503ba6379230e8b9c2c4f1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -359,8 +359,12 @@ add_custom_command(
     DEPENDS ${PROJECT_SOURCE_DIR}/all.h
     WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
     )
-
-precompiled_header(QT_INCLUDES all)
+if (MINGW)
+  set(BUILD_PCH false)
+else (MINGW)
+  set(BUILD_PCH true)
+endif(MINGW)
+precompiled_header(QT_INCLUDES all ${BUILD_PCH})
 ADD_CUSTOM_TARGET(mops1 DEPENDS ${PROJECT_BINARY_DIR}/all.h)
 ADD_CUSTOM_TARGET(mops2 DEPENDS ${PCH})
 
