also B#, B## - and add test
transpose tests were not being run, it seems, but they do work, so I am
enabling them and adding a diatonic transpose test that includes a full
chromatic scale.


Former-commit-id: 48c3e2fd942dabc88989d48fba02855d0d038435

--- a/mtest/libmscore/CMakeLists.txt
+++ b/mtest/libmscore/CMakeLists.txt
@@ -14,7 +14,7 @@
 subdirs(
       beam chordsymbol clef compat concertpitch copypaste copypastesymbollist dynamic element
       hairpin join keysig layout link measure midi note plugins repeat split
-      splitstaff timesig tuplet
+      splitstaff timesig transpose tuplet
       )
 
 
