add QT_NO_DEBUG to release cflags
Former-commit-id: c1ec30d90f4104385b3a6fccbe58f0e59fb60945

--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -77,7 +77,7 @@ target_link_libraries(
 
 set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 set(CMAKE_CXX_FLAGS_DEBUG   "-std=gnu++0x -g")
-set(CMAKE_CXX_FLAGS_RELEASE "-std=gnu++0x -O2 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE "-std=gnu++0x -O2 -DNDEBUG -DQT_NO_DEBUG")
 
 string(REPLACE ";" ";-I" INC "${QT_INCLUDES}")
 
