some Gonville fixes
Former-commit-id: d7b356dd37824cb81775d9aeb522dd84ab6f8759

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -496,7 +496,7 @@ endif (MINGW)
 
 if (APPLE)
      install (FILES
-      ../fonts/gonville/gonville-20.ttf
+      ../fonts/gonville/Gonville.otf
       ../fonts/mscore/mscore.ttf
       ../fonts/MuseJazz.ttf
       ../fonts/FreeSerifMscore.ttf
