replace FreeSerifMscore by plain FreeSerif font
Former-commit-id: 1327f2244f6b4ad80386dcbb6176ee47d96bb8d1

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -499,7 +499,7 @@ if (APPLE)
       ../fonts/gonville/Gonville.otf
       ../fonts/mscore/mscore.ttf
       ../fonts/MuseJazz.ttf
-      ../fonts/FreeSerifMscore.ttf
+      ../fonts/FreeSerif.ttf
       ../fonts/FreeSans.ttf
       ../fonts/mscoreTab.ttf
       ../fonts/mscore-BC.ttf
