--- a/mtest/libmscore/CMakeLists.txt
+++ b/mtest/libmscore/CMakeLists.txt
@@ -13,7 +13,7 @@
 
 subdirs(
       barline beam chordsymbol clef clef_courtesy compat concertpitch copypaste
-      copypastesymbollist dynamic element hairpin join keysig layout link measure midi
+      copypastesymbollist dynamic element hairpin join keysig layout parts measure midi
       note plugins repeat split splitstaff timesig transpose tuplet
       )
 
