start testing of text facility
Former-commit-id: aac18bec43561b13783bc124c424189fc6b66da1

--- a/mtest/libmscore/text/CMakeLists.txt
+++ b/mtest/libmscore/text/CMakeLists.txt
@@ -11,10 +11,7 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
-subdirs(
-      barline beam chordsymbol clef clef_courtesy compat concertpitch copypaste
-      copypastesymbollist dynamic element hairpin join keysig layout parts measure midi
-      note plugins repeat split splitstaff timesig transpose tuplet text
-      )
+set(TARGET tst_text)
 
+include(${PROJECT_SOURCE_DIR}/mtest/cmake.inc)
 
