install FreeSerifBold on Mac OSX
Former-commit-id: e0138552f6e26d3197e8cee9ebe1e190160a2d79

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -500,6 +500,7 @@ if (APPLE)
       ../fonts/mscore/mscore.ttf
       ../fonts/MuseJazz.ttf
       ../fonts/FreeSerif.ttf
+      ../fonts/FreeSerifBold.ttf
       ../fonts/FreeSans.ttf
       ../fonts/mscoreTab.ttf
       ../fonts/mscore-BC.ttf
