add variable MSCORE_OUTPUT_NAME, to be used like cmake .. -DMSCORE_OUTPUT_NAME=mscore-nightly
Former-commit-id: 4481328fd3fa0908752e26609b8112ca9b39c6c4

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -298,6 +298,15 @@ target_link_libraries(mscore
       effects
       vorbisfile
       )
+
+if (MSCORE_OUTPUT_NAME)
+      set_target_properties(
+            ${ExecutableName}
+            PROPERTIES
+            OUTPUT_NAME ${MSCORE_OUTPUT_NAME}
+            )
+endif (MSCORE_OUTPUT_NAME)
+
 if (ZERBERUS)
       target_link_libraries(mscore zerberus synthesizer)
 endif ()
