move qzip and xmlstream into separate libs
Former-commit-id: 1dff0380ef92a3c69c27f62f2feae0dcf9668fc6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -375,6 +375,7 @@ ADD_CUSTOM_TARGET(mops2 DEPENDS ${PCH})
 subdirs(
       mscore  awl bww2mxml share midi audiofile fluid mstyle libmscore synthesizer
       effects thirdparty/rtf2html thirdparty/diff
+      thirdparty/xmlstream thirdparty/qzip
       )
 
 add_subdirectory(mtest EXCLUDE_FROM_ALL)
