Renamed stafftype.ui to editstafftype.ui
Former-commit-id: 789f1ceff7a2bdd7eb5d6bb9de5043040c93655b

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -43,7 +43,7 @@ QT4_WRAP_UI (ui_headers
       transposedialog.ui lineproperties.ui excerptsdialog.ui  stafftext.ui tupletdialog.ui
       glissandoprop.ui articulation.ui metaedit.ui palette.ui select.ui
       synthcontrol.ui splitstaff.ui cellproperties.ui keyedit.ui selectinstr.ui
-      fretdprops.ui stafftype.ui sectionbreak.ui  bend.ui tremolobar.ui textproperties.ui
+      fretdprops.ui editstafftype.ui sectionbreak.ui  bend.ui tremolobar.ui textproperties.ui
       editpitch.ui editstringdata.ui editraster.ui mediadialog.ui textstyle.ui album.ui layer.ui
       omrpanel.ui startdialog.ui masterpalette.ui pluginManager.ui harmonyedit.ui pathlistdialog.ui
       note_groups.ui importmidi_panel.ui resourceManager.ui stafftypetemplates.ui
