try to update travis build to use gcc 4.8
Former-commit-id: 608bd9de808f4b9fc94f3f9c4813a91f458c8ba3

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ before_install:
   - "sudo rm -f /etc/apt/sources.list.d/rabbitmq-source.list"
   - "sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test"
   - "sudo apt-get -q update"
-  - "sudo apt-get install -y g++-4.7"
-  - "sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.7"
-  - "sudo apt-get install -y alsa libsndfile1 wget make ant curl cmake"
-  - "sudo apt-get install -y libasound2-dev portaudio19-dev libsndfile1-dev zlib1g-dev libfreetype6-dev libfontconfig-dev"
-  - "sudo apt-get install -y lame libmp3lame-dev"
+  - "sudo apt-get install -y g++-4.8"
+  - "sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8"
+  - "sudo apt-get install -qq alsa libsndfile1 wget make ant curl cmake"
+  - "sudo apt-get install -qq libasound2-dev portaudio19-dev libsndfile1-dev zlib1g-dev libfreetype6-dev libfontconfig-dev"
+  - "sudo apt-get install -qq lame libmp3lame-dev"
   - "mkdir qt5"
   - "wget -q -O qt5.zip http://ftp.osuosl.org/pub/musescore/utils/qt510.zip"
   - "unzip -qq qt5.zip -d qt5"
