give access key and secret to the new go travis artefact
Former-commit-id: 0774441c445049e61d4cf618ab94cd9cf49a4b51

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ before_install:
 before_script:
   - "artifacts -v || curl -sL https://raw.githubusercontent.com/meatballhat/artifacts/master/install | bash"
   - "export PATH=$PATH:$HOME/bin"
+#compatibility between ruby travis artefact and GO one
+  - "export ARTIFACTS_KEY=$ARTIFACTS_AWS_ACCESS_KEY_ID"
+  - "export ARTIFACTS_SECRET=$ARTIFACTS_AWS_SECRET_ACCESS_KEY"
   - "make revision"
   - "make debug CPUS=16"
   - "sudo make installdebug"
