--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ before_install:
   - "export PATH=`pwd`/qt5/bin:$PATH"
   - "export QT_PLUGIN_PATH=`pwd`/qt5/plugins"
 before_script:
+  #compatibility between ruby travis artefact and GO one
+  - "export ARTIFACTS_KEY=$ARTIFACTS_AWS_ACCESS_KEY_ID"
+  - "export ARTIFACTS_SECRET=$ARTIFACTS_AWS_SECRET_ACCESS_KEY"
   - "artifacts -v || curl -sL https://raw.githubusercontent.com/meatballhat/artifacts/master/install | bash"
   - "export PATH=$PATH:$HOME/bin"
   - "make revision"
@@ -30,14 +33,11 @@ before_script:
 script:
   - "../../build/run_tests.sh"
 after_script:
-#compatibility between ruby travis artefact and GO one
-  - "export ARTIFACTS_KEY=$ARTIFACTS_AWS_ACCESS_KEY_ID"
-  - "export ARTIFACTS_SECRET=$ARTIFACTS_AWS_SECRET_ACCESS_KEY"
   - "export TRAVIS_SHORT_COMMIT=`echo $TRAVIS_COMMIT | cut -c 1-8`"
   - "export ARTIFACTS_TARGET_PATHS=$TRAVIS_SHORT_COMMIT"
   - "export ARTIFACTS_PATHS=../../vtest/html"
-  - export $ARTIFACTS_PERMISSIONS="public-read"
-  - "artifacts upload"
+  - "export $ARTIFACTS_PERMISSIONS=public-read"
+  - "artifacts -D upload"
 notifications:
   recipients:
     - build@musescore.org
