--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,9 @@ script:
 after_script:
   - "export TRAVIS_SHORT_COMMIT=`echo $TRAVIS_COMMIT | cut -c 1-8`"
   - "export ARTIFACTS_TARGET_PATHS=$TRAVIS_SHORT_COMMIT"
-  - "export ARTIFACTS_PATHS=../../vtest/html"
-  - "export $ARTIFACTS_PERMISSIONS=public-read"
+  - "export ARTIFACTS_PATHS=."
+  - "export ARTIFACTS_PERMISSIONS=public-read"
+  - "export TRAVIS_BUILD_DIR=../../vtest/html"
   - "artifacts -D upload"
 notifications:
   recipients:
