remove debugging for artifact uploading
Former-commit-id: 58bf49dd7974dedca383433bea2d031e07f86752

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ after_script:
   - export ARTIFACTS_PATHS=$(ls ../../vtest/html | tr "\n" ":")
   - "export ARTIFACTS_PERMISSIONS=public-read"
   - "export TRAVIS_BUILD_DIR=../../vtest/html"
-  - "artifacts -D upload"
+  - "artifacts upload"
 notifications:
   recipients:
     - build@musescore.org
