update KeySig implementation
Former-commit-id: b7dd5af49980a6de8e36218884fda9f85b6d9497

--- a/libmscore/CMakeLists.txt
+++ b/libmscore/CMakeLists.txt
@@ -80,7 +80,7 @@ add_library (
       bsymbol.cpp marker.cpp jump.cpp stemslash.cpp ledgerline.cpp
       synthesizerstate.cpp mcursor.cpp groups.cpp mscoreview.cpp
       noteline.cpp spannermap.cpp
-      bagpembell.cpp ambitus.cpp
+      bagpembell.cpp ambitus.cpp keylist.cpp
       )
 if (SCRIPT_INTERFACE)
    set_target_properties (
